@@ -1,24 +1,37 @@
 package com.mantleluxury.backend.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
  * 全局 CORS 配置：
- * 允许本地前端 http://localhost:3000 访问 /api/** 接口。
+ * 允许本地前端 http://localhost:3000 和生产环境前端访问 /api/** 接口。
+ * 支持通过环境变量 CORS_ALLOWED_ORIGINS 配置允许的源。
  */
 @Configuration
 public class WebCorsConfig {
 
+    @Value("${cors.allowed-origins:http://localhost:3000}")
+    private String allowedOrigins;
+
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:3000"));
+        
+        // 从环境变量读取允许的源，支持多个源（用逗号分隔）
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOrigins(origins.stream()
+            .map(String::trim)
+            .filter(s -> !s.isEmpty())
+            .toList());
+        
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
